--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@types/cors": "^2.8.10",
     "@types/morgan": "^1.9.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.34"
   }
 }
